Locale editor: hide tab labels from 8th child onward to prevent line wrapping

--- a/src/Presentation/SmartStore.Web/Administration/Content/_admin.scss
+++ b/src/Presentation/SmartStore.Web/Administration/Content/_admin.scss
@@ -789,6 +789,11 @@ legend {
 			}
 		}
 
+        .nav-item:nth-child(n+8) > .nav-link {
+            > img, > i  { margin-left: 0 !important; margin-right: 0 !important; }
+            > span      { display: none; }
+        }
+
 		.nav-link:hover,
 		.nav-link.active {
 			color: inherit;
